# rag-wiki

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  HANDOFF-branch-protection-release-policy.md  HANDOFF-stage-1-deployment.md  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  healthcheck-report.md  healthcheck.py  pyproject.toml
.github/: branch-ruleset.json  copilot-instruction.md  dependabot.yml  tag-ruleset.json
.github/workflows/: _build-scan-push.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  release.yml
alembic/: env.py
alembic/versions/: 20260614_00cf5e4379c4_create_all_domain_tables.py  20260615_12caf0657a27_add_chunk_type_image_url_image_mime_.py  20260616_38be8f099d90_add_entity_merge_log_table.py  20260616_8b7890b0eb7a_add_completed_at_to_jobs.py  20260616_8eac469c307e_change_entity_merge_log_fk_to_set_null.py  20260616_9c29d1174c14_drop_entity_merge_log_foreign_key_.py  20260616_d54b602e9f93_make_entity_merge_log_fk_columns_.py  20260617_4b237e08e0bd_add_wiki_synthesis_columns_and_job_.py  20260618_f4859fa28eea_add_confidence_tag_and_confidence_score_.py  20260624_4bd96e67635d_add_source_plan_column_and_query_plans_.py  20260625_7222d58def98_rename_file_path_to_storage_key.py  20260701_4f8a3b2c9d1e_widen_vector_columns_to_3072.py  bf92jtg0is5z_add_pgvector_extension.py
context/: fastapi-api-implementation-plan.md  fastapi-api-task-breakdown.md  handoff-2026-06-20-grilling-session.md
deploy/: .env.example  Caddyfile  README.md  docker-compose.prod.yml
docs/: agent-harness.md  api.md  ci-context.md  coding-standards.md  docs-convention.md  e2e-guidance.md  harness-engineering.md  mcp-reference.md  okf-context.md  prompts.md  tech-stack.md
docs/adr/: 0001-relational-knowledge-graph.md  0002-hybrid-parsing-pipeline.md  0003-caption-to-text-embeddings.md  0004-single-tenant-deployment.md  0005-postgres-job-queue.md  0006-wiki-pages-in-postgres.md  0007-llm-provider-abstraction.md  0008-entity-resolution.md  0009-hybrid-retrieval.md  0010-automated-ingestion.md  0011-mineru-primary-parser.md  0012-hybrid-retrieval-implementation.md  0013-fastapi-api-surface.md  0014-ingest-and-query-planner.md  0015-s3-storage-provider.md  0016-mcp-server-wrapper.md  0017-stage-1-deployment-topology.md  0018-branch-protection-release-security-policy.md  0019-okf-export-format.md  0020-graph-analysis-layer.md  0021-interface-app-backend-contract.md  0022-query-streaming-via-sse.md  0023-export-api-and-job-artifact-download.md  0024-generated-output-pipeline.md
docs/prd/: 001-mcp-server-wrapper.md  002-stage-1-deployment.md  003-okf-export-format.md  004-graph-analysis-layer.md  database-schema.md  entity-relation-extraction.md  fastapi-api-surface.md  google-ai-embedding-provider.md  hybrid-retrieval.md  ingest-pipeline-orchestration.md  ingest-query-planner.md  lightweight-parsing-pipeline.md  s3-storage.md  wiki-synthesis.md
pgadmin/: servers.example.json
rag_wiki/: __init__.py  cli.py  exceptions.py  main.py  settings.py  worker.py
rag_wiki/api/: __init__.py  dependencies.py  exceptions.py  middleware.py  router.py  schemas.py
rag_wiki/db/: __init__.py  session.py
rag_wiki/graph/: __init__.py  extraction.py  merge.py  (+2 more)
results/: test-results.xml
scripts/: apply-branch-protection.sh  backup.sh  dump_validator.py  fix-venv.sh  pin_image_tag.py  restore_drill.sh
src/: exceptions.py  settings.py
tests/: __init__.py  conftest.py  test_cli_export.py  test_smoke.py
(+150 files in other folders)
