[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-wiki"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "structlog>=24.1",
    "openai>=1.30",
    "anthropic>=0.28",
    "pymupdf>=1.24",
    "unstructured>=0.14",
    "aiofiles>=23.0",
    "python-multipart>=0.0.9",  # FastAPI multipart/form-data parsing
    "typer>=0.12",          # for the rag-wiki CLI
    "Jinja2>=3.1",
]

[project.optional-dependencies]
mineru = ["magic-pdf>=0.6"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",          # for FastAPI test client
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
rag-wiki = "rag_wiki.cli:app"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
junit_family = "xunit2"

[tool.alembic]
script_location = "alembic"