[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-wiki"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.139.0",
    "fastmcp>=3.4,<4",
    "httpx>=0.27",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "structlog>=24.1",
    "openai>=2.44.0",
    "anthropic>=0.28",
    "pymupdf>=1.24",
    "unstructured>=0.14",
    "aiofiles>=23.0",
    "python-multipart>=0.0.9",  # FastAPI multipart/form-data parsing
    "typer>=0.12",          # for the rag-wiki CLI
    "Jinja2>=3.1",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.optional-dependencies]
mineru = ["magic-pdf>=0.6"]
s3 = ["aioboto3>=13.0"]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-env>=1.0",
    "httpx>=0.27",          # for FastAPI test client
    "ruff>=0.15.20",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
rag-wiki = "rag_wiki.cli:app"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
junit_family = "xunit2"
env = [
    "PYTHONNOUSERSITE=1",
]
markers = [
    "e2e: end-to-end tests that commit to a real database and run the full pipeline",
]

[tool.alembic]
script_location = "alembic"

